--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ button:hover {
     <form name="upetejambe">
         <input type="text" name="nama" placeholder="Nama Anda" required>
         <input type="email" name="email" placeholder="Email Anda" required>
+        <input type="asal" name="asal" placeholder="Asal anda" required>
 
         <div class="radio-group">
             <label>Jenis Kelamin:</label>
