--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ button:hover {
 
         <div class="radio-group">
             <label>Jenis Kelamin:</label>
-            <label><input type="radio" name="jenisKelamin" value="Laki-laki" required> Laki-laki</label>
-            <label><input type="radio" name="jenisKelamin" value="Perempuan"> Perempuan</label>
+            <label><input type="radio" name="jenisKelamin" value="1" required> Laki-laki</label>
+            <label><input type="radio" name="jenisKelamin" value="2"> Perempuan</label>
         </div>
 
         <label for="pendidikan">Pendidikan:</label>
