--- a/thanks.html
+++ b/thanks.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #00c6ff, #0072ff);
+             background: linear-gradient(135deg, #667eea, #764ba2);
             color: #fff;
             display: flex;
             justify-content: center;
