--- a/index.html
+++ b/index.html
@@ -123,25 +123,25 @@ button:hover {
         <label for="pekerjaan">Pekerjaan:</label>
         <select name="pekerjaan" id="pekerjaan" required>
             <option value="">Pilih Pekerjaan</option>
-            <option value="PNS">PNS</option>
-            <option value="TNI">TNI</option>
-            <option value="POLRI">POLRI</option>
-            <option value="Swasta">Swasta</option>
-            <option value="Wirausaha">Wirausaha</option>
-            <option value="Lainya">Lainya</option>
+            <option value="1">PNS</option>
+            <option value="2">TNI</option>
+            <option value="3">POLRI</option>
+            <option value="4">Swasta</option>
+            <option value="5">Wirausaha</option>
+            <option value="6">Lainya</option>
         </select>
 
         <label for="jenisLayanan">Jenis Layanan:</label>
         <select name="jenisLayanan" id="jenisLayanan" required>
             <option value="">Pilih Jenis Layanan</option>
-            <option value="Mutasi Kepegawaian">Mutasi Kepegawaian</option>
-            <option value="Seleksi Sekolah Kedinasan">Seleksi Sekolah Kedinasan</option>
-            <option value="Seleksi Pengembangan Karier">Seleksi Pengembangan Karier</option>
-            <option value="Seleksi CASN">Seleksi CASN</option>
-            <option value="Seleksi non ASN">Seleksi non ASN</option>
-            <option value="Simulasi CAT BKN">Simulasi CAT BKN</option>
-            <option value="Pensiun">Pensiun</option>
-            <option value="Kenaikan Pangkat">Kenaikan Pangkat</option>
+            <option value="1">Mutasi Kepegawaian</option>
+            <option value="2">Seleksi Sekolah Kedinasan</option>
+            <option value="3">Seleksi Pengembangan Karier</option>
+            <option value="4">Seleksi CASN</option>
+            <option value="5">Seleksi non ASN</option>
+            <option value="6">Simulasi CAT BKN</option>
+            <option value="7">Pensiun</option>
+            <option value="8">Kenaikan Pangkat</option>
         </select>
 
         <textarea name="pesan" rows="5" placeholder="Pesan Anda" required></textarea>
