--- a/index.html
+++ b/index.html
@@ -157,13 +157,18 @@ button:hover {
     const form = document.forms['upetejambe'];
 
     form.addEventListener('submit', e => {
-        e.preventDefault();
-        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-            .then(response => {
-                console.log('Success!', response);
-                window.location.href = 'thanks.html';
-            })
-            .catch(error => console.error('Error!', error.message));
+    e.preventDefault();
+    fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        .then(response => {
+            alert("Data berhasil terkirim!");
+            window.location.href = 'thanks.html';
+        })
+        .catch(error => {
+            alert("Terjadi error: " + error.message);
+            console.error('Error!', error.message);
+        });
+});
+
     });
 </script>
 </body>
