--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ button:hover {
 <body>
 <div class="container">
     <img src="https://www.bkn.go.id/unggahan/2023/11/Landscape-logo.png" alt="Logo BKN" class="logo">
-    <h1>Hubungi Kami</h1>
+    <h1>SURVEI LAYANAN KEPUASAN UPT BKN JAMBI</h1>
     <form name="upetejambe">
         <input type="text" name="nama" placeholder="Nama Anda" required>
         <input type="email" name="email" placeholder="Email Anda" required>
